# mlops_env_sample

./: README.md  docker-compose-gpu.yml  docker-compose.yml  push_to_ecr.sh
env_settings/: .env.default  entrypoint.sh
env_settings/dependencies/cpu/: pyproject.toml
env_settings/dictionaries/: sample_userdic.csv
env_settings/dockerfiles/: Dockerfile  Dockerfile-gpu
